[gd_scene load_steps=5 format=3 uid="uid://bces3yyu57psw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_g2byx"]

[sub_resource type="SphereMesh" id="SphereMesh_iipc8"]

[sub_resource type="QuadMesh" id="QuadMesh_a6otw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0ij3"]
radius = 25.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource( "1_g2byx" )
dash_duration = 0.3

[node name="MeshInstance2D" type="MeshInstance2D" parent="."]
scale = Vector2(50, 50)
mesh = SubResource( "SphereMesh_iipc8" )

[node name="MeshInstance2D" type="MeshInstance2D" parent="MeshInstance2D"]
modulate = Color(1, 0, 0.027451, 1)
position = Vector2(0, -0.4)
rotation = 0.785398
scale = Vector2(0.4, 0.4)
mesh = SubResource( "QuadMesh_a6otw" )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( "CircleShape2D_w0ij3" )

[node name="DashTimer" type="Timer" parent="."]

[node name="DashCooldownTimer" type="Timer" parent="."]

[node name="OrbPosition" type="Position2D" parent="."]
position = Vector2(50, -25)
